[package]
name = "simulation-wasm"
version = "0.1.0"
authors = ["Christopher YOVANOVITCH <yovano_c@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features =  ["js"]}
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"]  }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }
serde-wasm-bindgen = "0.4"

simulation = { path = "../simulation"  }

