[package]
name = "simulation"
version = "0.1.0"
authors = ["Christopher YOVANOVITCH <yovano_c@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.2", features = ["rand-no-std"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }

genetic-algorithm = { path = "../genetic-algorithm" }
neural-network = { path = "../neural-network" }

[dev-dependencies]
approx = "0.5.1"
rand_chacha = "0.3.1"
test-case = "3.0.0"